✨ Add venue category
