# src/app4event/entity.ts
@@ -11,3 +11,4 @@ export type DelayedNews = openapi.types.components['schemas']['DelayedNews']
 export type Group = openapi.types.components['schemas']['Group']
 export type Venue = openapi.types.components['schemas']['Venue']
 export type Day = openapi.types.components['schemas']['Day']
+export type VenueCategory = openapi.types.components['schemas']['VenueCategory']
